--- a/journey.html
+++ b/journey.html
@@ -280,6 +280,9 @@
     <p>
       By following travelers you like, you can see the stories they share and the details of their trips. The interface is designed as a general to detail layout: from overall introduction with photo highlights to detailed daily itinerary and recommendations.
       </p>
+    <div class="container">
+      <img src="image/journey/37.png" class="img-fluid" alt="Responsive image">
+    </div>
     <div class="container gif">
       <img src="image/journey/28.gif" class="img-fluid" alt="Responsive image">
     </div>
