--- a/fuzhou.html
+++ b/fuzhou.html
@@ -92,6 +92,7 @@
       <ul style="padding: 0 0 0 0; margin-left: 30px"> 
           <li>Redesign Website</li>
           <li>Responsive Design</li>
+          <li>Wechat Blogs</li>
         </ul>
       <li>Next</li>
         <ul style="padding: 0 0 0 0; margin-left: 30px"> 
@@ -218,7 +219,7 @@
 <div class="content">
   <p>Because we only three students on the team, the new designs need to reuse the existing elements as much as possible to eliminate unnecessary development efforts. </p>
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide dark" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1" ></li>
@@ -312,6 +313,49 @@
     <img src="image/fuzhou/47.png" class="img-fluid" alt="Responsive image">
   </div>
   <hr>
+
+</div>
+
+<div class="jumbotron jumbotron-fluid fuzhougrey">
+  <div class="container">
+    <p class="lead">UI Design</p>
+    <h1 class="display-5">Wechat Blogs</h1>
+  </div>
+</div>
+<div class="content">
+  <p>We also have an blog on wechat where we post articles about Fuzhou Dialect. We currently have 2000 subscribers.</p>
+
+  <div id="carouselExampleIndicators1" class="carousel slide dark" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators1" data-slide-to="1" ></li>
+    <li data-target="#carouselExampleIndicators1" data-slide-to="2" ></li>
+    <li data-target="#carouselExampleIndicators1" data-slide-to="3" ></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="image/fuzhou/50.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="image/fuzhou/51.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="image/fuzhou/52.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="image/fuzhou/53.png" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<hr>
 
     </div>
 
