--- a/fuzhou.html
+++ b/fuzhou.html
@@ -323,7 +323,7 @@
   </div>
 </div>
 <div class="content">
-  <p>We also have an blog on wechat where we post articles about Fuzhou Dialect. We currently have 2000 subscribers.</p>
+  <p>Since we target young people and Wechat is a popular social app in China. We posts blogs on wechat about Fuzhou Dialect and we currently have 2000 subscribers. While we need some improvements about the format and visual design.</p>
 
   <div id="carouselExampleIndicators1" class="carousel slide dark" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -358,6 +358,33 @@
 <hr>
 
     </div>
+
+<div class="jumbotron jumbotron-fluid fuzhou">
+  <div class="container">
+    <h1 class="display-5">Insights and Moving Forward.</h1>
+    
+  </div>
+</div>
+
+<div class="content">
+
+  <h4>Teamwork is the intersection of design and technology. </h4>
+  <p> I learned that in order for a project to work out well, designers and engineers have to understand and work closely with each other. Design should consider the technical liminations and engineering should match with design as well. 
+  </p>
+</div>
+  <hr>
+
+  <div class="content">
+
+  <h4>Never be afraid to start</h4>
+  <p>Everyone in the team are just college students. I was a little hesitated to start at the beginning as there is no one profenssional in our team. While I realize if you want to do something, instead of worring about limits, you should just take the actions to start.</p>
+
+  <p>
+    We started from ideas and thoughts, and we are still on our way to protect the things we treassure in our hometown.
+  </p>
+</div>
+
+
 
 <div class="jumbotron jumbotron-fluid fuzhou">
   <div class="container">
@@ -448,6 +475,41 @@
     </div>
     <div class="card-footer">
       <a href="split.html" class="card-link">Read more</a>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="card text-center">
+    <img class="card-img-top" src="image/uber/1.png" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Uber</h4>
+      <p class="card-text">Redesign UI for multiple destinations.</p>
+      <p style="padding-top: 22px"> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
+    </div>
+    <div class="card-footer">
+      <a href="uber.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  <div class="card text-center" style="visibility: hidden;">
+    <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Split</h4>
+      <p class="card-text">A visualized calculator for spliting bills.</p>
+      <p style="padding-top: 22px"> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+    </div>
+    <div class="card-footer">
+      <a href="split.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  
+  <div class="card text-center" style="visibility: hidden;">
+    <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Fuzhou</h4>
+      <p class="card-text">An online dictionary designed to preserve Chinese dialect.</p>
+    </div>
+    <div class="card-footer">
+      <a href="fuzhou.html" class="card-link">Read more</a>
     </div>
   </div>
 </div>
