--- a/journey.html
+++ b/journey.html
@@ -362,6 +362,42 @@
     </div>
   </div>
 </div>
+
+<div class="row">
+  <div class="card text-center">
+    <img class="card-img-top" src="image/uber/1.png" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Uber</h4>
+      <p class="card-text">Redesign UI for multiple destinations.</p>
+      <p style="padding-top: 22px"> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
+    </div>
+    <div class="card-footer">
+      <a href="uber.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  <div class="card text-center" style="visibility: hidden;">
+    <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Split</h4>
+      <p class="card-text">A visualized calculator for spliting bills.</p>
+      <p style="padding-top: 22px"> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+    </div>
+    <div class="card-footer">
+      <a href="split.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  
+  <div class="card text-center" style="visibility: hidden;">
+    <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Fuzhou</h4>
+      <p class="card-text">An online dictionary designed to preserve Chinese dialect.</p>
+    </div>
+    <div class="card-footer">
+      <a href="fuzhou.html" class="card-link">Read more</a>
+    </div>
+  </div>
+</div>
 </div>
 
 </div>
