--- a/life.html
+++ b/life.html
@@ -274,6 +274,7 @@
   <h4>More to explore. </h4>
   <p>There are many people who live under the sub-health condition and need health advice. Some health issues can be greatly improved by eating wisely, while there are also much more: exercise, sleep, mental health etc. More products and services should and need to be developed, so people can have the knowledge of how to improve health. Changing behavior day by day can make a large impact on the long term. 
   </p>
+  <p>There are still many improments can be maded to the design. I'll continue to revise, learn and grow.</p>
 </div>
   <hr>
 <div class="content">
@@ -315,6 +316,42 @@
     </div>
     <div class="card-footer">
       <a href="split.html" class="card-link">Read more</a>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="card text-center">
+    <img class="card-img-top" src="image/uber/1.png" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Uber</h4>
+      <p class="card-text">Redesign UI for multiple destinations.</p>
+      <p style="padding-top: 22px"> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
+    </div>
+    <div class="card-footer">
+      <a href="uber.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  <div class="card text-center" style="visibility: hidden;">
+    <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Split</h4>
+      <p class="card-text">A visualized calculator for spliting bills.</p>
+      <p style="padding-top: 22px"> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+    </div>
+    <div class="card-footer">
+      <a href="split.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  
+  <div class="card text-center" style="visibility: hidden;">
+    <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Fuzhou</h4>
+      <p class="card-text">An online dictionary designed to preserve Chinese dialect.</p>
+    </div>
+    <div class="card-footer">
+      <a href="fuzhou.html" class="card-link">Read more</a>
     </div>
   </div>
 </div>
