--- a/fuzhou.html
+++ b/fuzhou.html
@@ -309,8 +309,16 @@
   <div class="container">
     <img src="image/fuzhou/24.png" class="img-fluid" alt="Responsive image">
   </div>
+  <h4>From quick iterations to precision</h4>
   <div class="container">
-    <img src="image/fuzhou/47.png" class="img-fluid" alt="Responsive image">
+    <img src="image/fuzhou/55.png" class="img-fluid" alt="Responsive image">
+  </div>
+  <div class="container">
+    <img src="image/fuzhou/57.png" class="img-fluid" alt="Responsive image">
+  </div>
+  <h4>Final Design</h4>
+  <div class="container">
+    <img src="image/fuzhou/56.png" class="img-fluid" alt="Responsive image">
   </div>
   <hr>
 
@@ -323,7 +331,7 @@
   </div>
 </div>
 <div class="content">
-  <p>Since we target young people and Wechat is a popular social app in China. We posts blogs on wechat about Fuzhou Dialect and we currently have 2000 subscribers. While we need some improvements about the format and visual design.</p>
+  <p> Since we target young people and Wechat is a popular social app in China. We started a wechat blog to post articles about Fuzhou Dialect. This is when more people joined our team as writers and editors. We currently have 2000 subscribers. I mostly worked on some improvements for the format and visual design.</p>
 
   <div id="carouselExampleIndicators1" class="carousel slide dark" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -355,6 +363,9 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<div class="container">
+    <img src="image/fuzhou/54.jpg" class="img-fluid" alt="Responsive image">
+  </div>
 <hr>
 
     </div>
