--- a/split.html
+++ b/split.html
@@ -117,33 +117,14 @@
     </div>
      <hr>
 
-    <h4>Research</h4>
-    <p>By researching existing apps, I find some of them are heavy with too many functions (e.g. sign in, search, add friends, create groups). I want to make this app a lightweight tool so that it can be easily understood and used.</p>
-    <div id="carouselExampleIndicators" class="carousel slide dark" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="image/split/6.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="image/split/7.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="image/split/8.jpg" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+    <h4>Experiment</h4>
+    <p>Continuing the scenario in the storyboard, I proposed a math problem for experiment. I test with different existing apps to analyze the process for users.</p>
+    <div class="container">
+      <img class="img-fluid" src="image/split/21.png">
+    </div>
+    <hr>
+    <div class="container">
+      <img class="img-fluid" src="image/split/23.png">
     </div>
     <hr>
 
@@ -159,7 +140,8 @@
 <div class="content">
 
 
-    <h4 style="padding-bottom: 100px">Split is an app that helps users simplify and visualize the process of splitting a bill. </h4>
+    <h4>Split is an app that helps users simplify and visualize the process of splitting a bill. </h4>
+    <p style="padding-bottom: 100px">Instead of being overloaded by too many functions (e.g. sign in, search, add friends, create groups), I want to make this app a lightweight tool so that it can be easily understood and used.</p>
     <hr >
     
 
@@ -201,11 +183,59 @@
     <hr>
 
     <div class="container gifLarge">
+      <h4>Development</h4>
+    <p>
+      After self learning some coding skills, I begin to push from prototyping to developing in HTML, CSS and Javascript.
+    </p>
       <a href="https://pr.to/92ET9M/" target="_blank" class="link">Proto.io Prototype</a>
       <a syhref="https://nachuan99.github.io/split/" target="_blank" class="link" style="padding-bottom: 40px">Front End Prototype</a>
+       <div class="row ui" style="padding-bottom: 100px">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-4">
+              <img class="img-fluid" src="image/split/25.png">
+            </div>
+            <div class="col-md-4">
+              <img class="img-fluid" src="image/split/24.png">
+            </div>
+            <div class="col-md-2">
+            </div>
+          </div>
+          <hr style="padding-bottom: 50px">
       <img src="image/split/17.gif" class="img-fluid" alt="Responsive image">
     </div>
     <hr>
+
+
+</div>
+
+<div class="jumbotron jumbotron-fluid split">
+  <div class="container">
+    <h1 class="display-5">Insights and Moving Forward</h1>
+  </div>
+</div>
+
+
+
+
+<div class="content">
+
+  <h4>Applying simplicity</h4>
+  <p>It is very easy to keep adding when designers start to brainstorm. So through this project, I learned how to stick to the original goal, clairify the needs and simplify the user flow. </p>
+
+</div>
+  <hr>
+<div class="content">
+
+  
+  <h4>Being willing to learn.</h4>
+  
+  <p>As design becomes more and more integrated into other fields, it is helpful to understand development so that design can be better implemented.
+  </p>
+</div>
+  <hr>
+<div class="content">
+
 
 <div class="card-deck" id="projectCard" style="background: white; padding-top: 50px">
   <h4 style="color: grey; padding-left: 0">More works</h4>
