--- a/split.html
+++ b/split.html
@@ -193,10 +193,10 @@
             <div class="col-md-2">
             </div>
             <div class="col-md-4">
-              <img class="img-fluid" src="image/split/25.png">
+              <img class="img-fluid" src="image/split/25.PNG">
             </div>
             <div class="col-md-4">
-              <img class="img-fluid" src="image/split/24.png">
+              <img class="img-fluid" src="image/split/24.PNG">
             </div>
             <div class="col-md-2">
             </div>
