--- a/fuzhou.html
+++ b/fuzhou.html
@@ -102,9 +102,10 @@
 
 </div>
 
-<div class="jumbotron jumbotron-fluid fuzhougrey">
+<div class="jumbotron jumbotron-fluid fuzhouwhite">
   <div class="container">
     <h1 class="display-5">My role</h1>
+    <hr>
   </div>
 </div>
 
@@ -117,10 +118,11 @@
 
 </div>
 
-<div class="jumbotron jumbotron-fluid fuzhougrey">
+<div class="jumbotron jumbotron-fluid fuzhouwhite">
   <div class="container">
     <p class="lead">Research</p>
     <h1 class="display-5">Understand the Development of Fuzhou Dialect.</h1>
+    <hr>
   </div>
 </div>
 
@@ -210,10 +212,11 @@
     <hr>
 </div>
 
-<div class="jumbotron jumbotron-fluid fuzhougrey">
+<div class="jumbotron jumbotron-fluid fuzhouwhite">
   <div class="container">
     <p class="lead">UI Design</p>
     <h1 class="display-5">Redesign Website</h1>
+    <hr>
   </div>
 </div>
 <div class="content">
@@ -296,10 +299,11 @@
 
 </div>
 
-<div class="jumbotron jumbotron-fluid fuzhougrey">
+<div class="jumbotron jumbotron-fluid fuzhouwhite">
   <div class="container">
     <p class="lead">UI Design</p>
     <h1 class="display-5">Responsive Design</h1>
+    <hr>
   </div>
 </div>
 <div class="content">
@@ -324,10 +328,11 @@
 
 </div>
 
-<div class="jumbotron jumbotron-fluid fuzhougrey">
+<div class="jumbotron jumbotron-fluid fuzhouwhite">
   <div class="container">
     <p class="lead">UI Design</p>
     <h1 class="display-5">Wechat Blogs</h1>
+    <hr>
   </div>
 </div>
 <div class="content">
@@ -370,16 +375,17 @@
 
     </div>
 
-<div class="jumbotron jumbotron-fluid fuzhou">
+<div class="jumbotron jumbotron-fluid fuzhouwhite">
   <div class="container">
     <h1 class="display-5">Insights and Moving Forward.</h1>
+    <hr>
     
   </div>
 </div>
 
 <div class="content">
 
-  <h4>Teamwork is the intersection of design and technology. </h4>
+  <h4>The intersection of design and technology. </h4>
   <p> I learned that in order for a project to work out well, designers and engineers have to understand and work closely with each other. Design should consider the technical liminations and engineering should match with design as well. 
   </p>
 </div>
