--- a/split.html
+++ b/split.html
@@ -117,7 +117,7 @@
     </div>
      <hr>
 
-    <h4>Experiment</h4>
+    <h4>Experiments</h4>
     <p>Continuing the scenario in the storyboard, I proposed a math problem for experiment. I test with different existing apps to analyze the process for users.</p>
     <div class="container">
       <img class="img-fluid" src="image/split/21.png">
@@ -125,6 +125,12 @@
     <hr>
     <div class="container">
       <img class="img-fluid" src="image/split/23.png">
+    </div>
+    <hr>
+
+     <h4>Take Away from Experiments</h4>
+     <div class="container">
+      <img class="img-fluid" src="image/split/26.png">
     </div>
     <hr>
 
