--- a/about.html
+++ b/about.html
@@ -54,11 +54,15 @@
 
     <div class="col-sm-8">
       <div class="jumbotron">
-        <h1 class="display-3" style="font-size: 40px;">Hello, I'm Sherry, a multidiciplinary designer</h1>
-        <p>For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
+        <h1 class="display-3" style="font-size: 40px; padding-bottom: 50px">Hello,</h1>
+        <p>I'm Sherry, a multidiciplinary designer. For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
 
-        <p>My interest in design begins with my fascination with architecture. During the design phase, I learn to consider how people feel and interact with the space. I became more and more interested in this concept of user-centered interaction and design, and I use the design skills I learned in college to develop UI and UX projects.</p> 
+        <p>My interest in design begins with my fascination with architecture. During the design phase, I learn to consider how people feel and interact with the space. I became more and more interested in this concept of user-centered interaction and design, and I use the design skills I learned in college to develop UI and UX projects, as it combines my love for tech, art, and people.</p> 
+
+        <a href="https://www.linkedin.com/in/sherry-li-062447b2/"><img class="img-fluid" src="image/about/1.png" style="width: 30px; margin-top: 50px"></a>
+
       </div>
+      
     </div>
 
     <div class="col-sm-2">
